# a01110946

./: A2a_DL_TC5033_AD2023_1_a01110946.ipynb  A2c_DL_TC5033_AD2023.ipynb  Equipo06_semana06y07_.ipynb  README.md  SalesResults.txt  computeSales.py  kepler.gl_map0.json  kepler.gl_map2.json  pruebaOMP.cpp
A01110946_A4.2/P1/: computeStatistics.py
A01110946_A4.2/P2/: ConversionResults.txt
A01110946_A4.2/ejercicio_3/: wordCount.py
DataScienceMNA/: Copia_de_Reto_Entrega1_Limpieza_análisis_visualización_kmeans.ipynb  kepler.gl_map1.json
PruebasDeSoftwareMNA/A01110946_A5.2/: .gitignore
PruebasDeSoftwareMNA/A01110946_A6.2/: .coverage  .gitignore  Hotel for Reservation_data.json  README.md  Test Hotel_data.json  customer_1.json  pyproject.toml  reservation_1.json  reservation_reservation_id.json  setup.py
PruebasDeSoftwareMNA/A01110946_A6.2/bookinn.egg-info/: PKG-INFO  SOURCES.txt
PruebasDeSoftwareMNA/A01110946_A6.2/bookinn/customer/: customer.py
PruebasDeSoftwareMNA/A01110946_A6.2/bookinn/hotel/: hotel.py  room.py
PruebasDeSoftwareMNA/A01110946_A6.2/bookinn/reservation/: reservation.py
PruebasDeSoftwareMNA/A01110946_A6.2/tests/: customer_test.py  hotel_test.py  reservation_test.py  room_test.py
PruebasDeSoftwareMNA/A01110946_A6.2/venv_A6-2/: pyvenv.cfg
PruebasDeSoftwareMNA/A01110946_A6.2/venv_A6-2/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
ejercicio_1/: StatisticsResults.txt
ejercicio_2/: .pylintrc
ejercicio_3/: WordCountResults.txt
pylint/A01110946_A4.2/: ConversionResults.txt  StatisticsResults.txt  WordCountResults.txt
(+7 files in other folders)
