[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
# Specify the source directories to include in coverage analysis
source = [
    "bookinn",
    "tests"
]
# Specify the directories to omit from coverage analysis
omit = [
    "*/site-packages/*",
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
]

[tool.coverage.report]
# Set minimum coverage percentages for reporting success
fail_under = 85

# Exclude lines that are not relevant to coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def main()",
]

[tool.coverage.paths]
source = [
    "bookinn",
    "*/site-packages",
]

[tool.coverage.html]
directory = "coverage_html_report"
